; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-nix.c_fill_base_keysyms.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-nix.c_fill_base_keysyms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_core_hotkeys = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@OBS_KEY_LAST_VALUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_core_hotkeys*)* @fill_base_keysyms to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_base_keysyms(%struct.obs_core_hotkeys* %0) #0 {
  %2 = alloca %struct.obs_core_hotkeys*, align 8
  %3 = alloca i64, align 8
  store %struct.obs_core_hotkeys* %0, %struct.obs_core_hotkeys** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %18, %1
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @OBS_KEY_LAST_VALUE, align 8
  %7 = icmp ult i64 %5, %6
  br i1 %7, label %8, label %21

8:                                                ; preds = %4
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @get_keysym(i64 %9)
  %11 = load %struct.obs_core_hotkeys*, %struct.obs_core_hotkeys** %2, align 8
  %12 = getelementptr inbounds %struct.obs_core_hotkeys, %struct.obs_core_hotkeys* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  store i32 %10, i32* %17, align 4
  br label %18

18:                                               ; preds = %8
  %19 = load i64, i64* %3, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %3, align 8
  br label %4

21:                                               ; preds = %4
  ret void
}

declare dso_local i32 @get_keysym(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
